# freshly

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  demo.rs  main.rs  settings.rs  trace.rs  updater.rs
src/discovery/: mod.rs
src/model/: mod.rs
src/scanner/: appstore.rs  homebrew.rs  mod.rs  sparkle.rs
src/ui/: app_detail.rs  app_list.rs  error_overlay.rs  help_overlay.rs  loading.rs  mod.rs  status_bar.rs  update_overlay.rs
tests/fixtures/: SparkleApp.plist  TestApp.plist  appcast.xml
