[package]
name = "freshly"
version = "0.1.0"
edition = "2021"
description = "macOS app update checker TUI"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
quick-xml = "0.37"
plist = "1"
semver = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
html2text = "0.14"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
mockito = "1"
