[package]
name = "freshly"
version = "1.0.0"
edition = "2021"
description = "macOS app update checker TUI"
license = "MIT"
repository = "https://github.com/skydiver/freshly"
homepage = "https://github.com/skydiver/freshly"
authors = ["Martín M."]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
quick-xml = "0.37"
plist = "1"
semver = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
html2text = "0.14"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
mockito = "1"
